--- a/sim/omnetpp.ini
+++ b/sim/omnetpp.ini
@@ -3,11 +3,14 @@ network = OpenPublicNetwork
 tkenv-plugin-path = ../../../etc/plugins
 **.internet.networkLayer.delayer.config = xmldoc("gamma100.xml")
 
-**.h[0..10].numUdpApps = 1
+**.h[0..9].numUdpApps = 1
 
-**.h[0].udpApp[0].typename = "source"
+**.h[0].udpApp[0].typename = "Sensor"
 **.h[9].udpApp[0].typename = "FCLayer2"
 **.h[1..8].udpApp[0].typename = "FCLayer1"
+
+**.h[0].udpApp[0].path_to_image = "../mnist/t10k-images.idx3-ubyte"
+**.h[9].udpApp[0].path_to_label = "../mnist/t10k-labels.idx1-ubyte" 
 
 **.h[1].udpApp[0].id = 0
 **.h[2].udpApp[0].id = 1
@@ -26,4 +29,4 @@ tkenv-plugin-path = ../../../etc/plugins
 **.h[6].udpApp[0].startTime = 0.0
 **.h[7].udpApp[0].startTime = 0.0
 **.h[8].udpApp[0].startTime = 0.0
-
+**.h[9].udpApp[0].startTime = 0.0
