--- a/omnet/omnetpp.ini
+++ b/omnet/omnetpp.ini
@@ -9,8 +9,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.h[9].udpApp[0].typename = "FCLayer2"
 **.h[1..8].udpApp[0].typename = "FCLayer1"
 
-**.h[0].udpApp[0].path_to_image = "../mnist/t10k-images.idx3-ubyte"
-**.h[9].udpApp[0].path_to_label = "../mnist/t10k-labels.idx1-ubyte" 
+**.path_to_image = "mnist/t10k-images.idx3-ubyte"
+**.path_to_label = "mnist/t10k-labels.idx1-ubyte" 
+**.path_to_model = "model-neural-network.dat"
+**.path_to_report = "testing-report.dat"
 
 **.h[1].udpApp[0].id = 0
 **.h[2].udpApp[0].id = 1
